--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<span></span>
 		<div class="flex-col-c p-t-50 p-b-50">
 			<h3 class="l1-txt1 txt-center p-b-10">
-				Welcome to <span style="color: green; background-color: black; font-size: 55px;"> Champion.in</span>
+				Welcome to Champion.in
 			</h3>
 
 			<p class="txt-center l1-txt2 p-b-60">
